--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -23,7 +23,7 @@ jobs:
         name: Checkout
         uses: actions/checkout@v2
       -
-        name: UnshalloPASSPHRASEw
+        name: Unshallow
         run: git fetch --prune --unshallow
       -
         name: Set up Go
