--- a/TFproviderTest.yml
+++ b/TFproviderTest.yml
@@ -162,30 +162,17 @@ pipelines:
             - cd ${res_GitHubTFProviderXrayRepoJFrog_resourcePath}
             - echo "Verify the code contents merged feature branch with development branch"
             - git branch && ls -al
-            ## commented out before the first version released. Version is hardcoded to 0.0.1
-            #- export PROVIDER_VERSION=$(git tag --sort=-v:refname | head -1 | sed  -n 's/v\([0-9]*\).\([0-9]*\).\([0-9]*\)/\1.\2.\3/p')
-            #- export NEXT_PROVIDER_VERSION=$(echo ${PROVIDER_VERSION}| awk -F '.' '{print $1 "." $2 "." $3 +1 }')
-            #- echo $PROVIDER_VERSION
-            #- echo $NEXT_PROVIDER_VERSION
-            - echo "Rename the build to make it work on Ubuntu"
-            - cat GNUmakefile | sed -e "s/darwin_amd64/linux_amd64/g" > GNUmakefile.tmp
-            - cp GNUmakefile.tmp GNUmakefile && rm GNUmakefile.tmp
-            - cat GNUmakefile
-            ## commented out before the first version released. Version is hardcoded to 0.0.1
-            #- cat sample.tf | sed -e "s/version =.*/version = \"${NEXT_PROVIDER_VERSION}\"/g" > sample.tf.tmp
-            #- cp sample.tf.tmp sample.tf && rm sample.tf.tmp
-            #- cat sample.tf
             - echo "Add variables needed to run Terraform Provider Xray"
             - export JFROG_URL=${jdp_url} && echo ${JFROG_URL}
             - export ARTIFACTORY_USERNAME=admin
             - export ARTIFACTORY_PASSWORD=${NEW_RT_PASSWORD} && echo ${ARTIFACTORY_PASSWORD}
-            - echo "Get cookie to generate Access token"
+            - echo "Get cookie to generate Access token. There is no public API to generate Access token using username and password"
             - >-
               export COOKIES=$(curl -c - "${JFROG_URL}/ui/api/v1/ui/auth/login?_spring_security_remember_me=false" \
                             --header "accept: application/json, text/plain, */*" \
                             --header "content-type: application/json;charset=UTF-8" \
                             --header "x-requested-with: XMLHttpRequest" \
-                            -d '{"user":"admin","password":"'"${ARTIFACTORY_PASSWORD}"'","type":"login"}' | grep FALSE)
+                            -d '{"user":"'"${ARTIFACTORY_USERNAME}"'","password":"'"${ARTIFACTORY_PASSWORD}"'","type":"login"}' | grep FALSE)
             - export REFRESHTOKEN=$(echo $COOKIES | grep REFRESHTOKEN | awk '{print $7 }')
             - export ACCESSTOKEN=$(echo $COOKIES | grep ACCESSTOKEN | awk '{print $14 }') # awk returns null on Mac, and the actual key on Ubuntu
             - >-
@@ -198,7 +185,7 @@ pipelines:
             - unset ARTIFACTORY_USERNAME && unset ARTIFACTORY_PASSWORD
             - export TF_ACC=1
             - make acceptance
-            - make install
+            - make install -e TARGET_ARCH=linux_amd64
           onSuccess:
             - send_notification partnersSlack --text "Terraform Provider Xray run is completed. Version ${NEXT_PROVIDER_VERSION}."
           onFailure:
@@ -227,6 +214,8 @@ pipelines:
             - export PR_URL=${res_GitHubTFProviderXrayRepoJFrog_commitUrl}
             - export PR_COMMITTER=${res_GitHubTFProviderXrayRepoJFrog_committerLogin}
             - export PR_BRANCH=${res_GitHubTFProviderXrayRepoJFrog_headCommitRef}
+            ## PR_TITLE var is used in the Slack message. We need to escape &, > and < per Slack documentation.
+            ## They will be replaced with &amp;, &gt; and &lt; respectively.
             - export PR_TITLE=$(echo ${res_GitHubTFProviderXrayRepoJFrog_commitMessage} | sed -e 's/\&/\&amp;/g' -e 's/>/\&gt;/g' -e 's/</\&lt;/g')
             - >-
               if [[ "${PR_URL}" == null ]]; then
