--- a/TFproviderTest.yml
+++ b/TFproviderTest.yml
@@ -54,6 +54,8 @@ pipelines:
           onExecute:
             - GKE_CLUSTER=tf-provider-xray-$(date +%s)
             - fozzie checkout native-steps
+            - echo "Whitelist Pipelines Node CIDR to be able to run Artifactory and Xray tests. Same variable is used in gke/create_cluster step to restrict access to the control plane."
+            - export WHITELIST_CIDR=$(curl ifconfig.me)/32 && echo ${WHITELIST_CIDR}
             - fozzie gke/create_cluster
             - echo "Creating Artifactory Secret"
             - kubectl create secret generic artifactory-license --from-file=$FOZZIE_HOME/native-steps/license/artifactory.cluster.license
@@ -74,7 +76,7 @@ pipelines:
             - JOIN_KEY=$(openssl rand -hex 32)
             - >-
               if [[ ${ARTIFACTORY_DISTRIBUTION} == "artifactory-ha" ]]; then
-                 helm upgrade --install artifactory-ha  jfrog/artifactory-ha --set nginx.service.ssloffload=true --set nginx.tlsSecretName=tls-ingress --set artifactory.masterKey=$MASTER_KEY --set artifactory.joinKey=$JOIN_KEY --set artifactory.license.secret=artifactory-license --set artifactory.license.dataKey=artifactory.cluster.license --set artifactory.node.replicaCount=1 --set postgresql.persistence.size=50Gi --set artifactory.persistence.size=50Gi --set nginx.service.loadBalancerSourceRanges='{152.215.237.185/32,52.9.243.19/32}'
+                 helm upgrade --install artifactory-ha  jfrog/artifactory-ha --set nginx.service.ssloffload=true --set nginx.tlsSecretName=tls-ingress --set artifactory.masterKey=$MASTER_KEY --set artifactory.joinKey=$JOIN_KEY --set artifactory.license.secret=artifactory-license --set artifactory.license.dataKey=artifactory.cluster.license --set artifactory.node.replicaCount=1 --set postgresql.persistence.size=50Gi --set artifactory.persistence.size=50Gi --set nginx.service.loadBalancerSourceRanges="{152.215.237.185/32,52.9.243.19/32,${WHITELIST_CIDR}}"
                  echo "Waiting for Artifactory HA roll out"
                  kubectl rollout status deployment/artifactory-ha-nginx
                  kubectl rollout status statefulset/artifactory-ha-artifactory-ha-primary
@@ -86,7 +88,7 @@ pipelines:
                  echo "Installing JFrog Xray"
                  helm upgrade --install xray jfrog/xray --set postgresql.persistence.size=200Gi --set xray.jfrogUrl=http://artifactory-ha-nginx --set xray.masterKey=$MASTER_KEY --set xray.joinKey=$JOIN_KEY
               else
-                 helm upgrade --install artifactory  jfrog/artifactory --set nginx.service.ssloffload=true --set nginx.tlsSecretName=tls-ingress --set artifactory.masterKey=$MASTER_KEY --set artifactory.joinKey=$JOIN_KEY --set artifactory.license.secret=artifactory-license --set artifactory.license.dataKey=artifactory.cluster.license --set postgresql.persistence.size=50Gi --set artifactory.persistence.size=50Gi --set nginx.service.loadBalancerSourceRanges='{152.215.237.185/32,52.9.243.19/32}'
+                 helm upgrade --install artifactory  jfrog/artifactory --set nginx.service.ssloffload=true --set nginx.tlsSecretName=tls-ingress --set artifactory.masterKey=$MASTER_KEY --set artifactory.joinKey=$JOIN_KEY --set artifactory.license.secret=artifactory-license --set artifactory.license.dataKey=artifactory.cluster.license --set postgresql.persistence.size=50Gi --set artifactory.persistence.size=50Gi --set nginx.service.loadBalancerSourceRanges="{152.215.237.185/32,52.9.243.19/32,${WHITELIST_CIDR}}"
                  echo "Waiting for Artifactory roll out"
                  kubectl rollout status deployment/artifactory-artifactory-nginx
                  kubectl rollout status statefulset/artifactory
