Pipelines. Fix typo.

--- a/TFproviderTest.yml
+++ b/TFproviderTest.yml
@@ -104,7 +104,7 @@ pipelines:
             - kubectl rollout status statefulset/xray
             - add_run_variables jdp_url=http://${GKE_CLUSTER}-rt.jfrog.tech
             - add_run_variables NEW_RT_PASSWORD=$NEW_RT_PASSWORD
-            - export RT_URL=$(echo ${jdp_url} | sed -e 's/.*https:\/\///g') && echo ${RT_URL}
+            - export RT_URL=$(echo ${jdp_url} | sed -e 's/.*http:\/\///g') && echo ${RT_URL}
             - git clone https://${int_Partnership_GitHub_token}@github.com/jfrog/partner-integration-tests.git
             - cd partner-integration-tests
             - echo "Common test will check services health and change the default admin user password, if NEW_RT_PASSWORD is set"
