--- a/TFproviderTest.yml
+++ b/TFproviderTest.yml
@@ -47,12 +47,14 @@ pipelines:
             NUM_NODES: ${int_gkeEnvVars_NUM_NODES}
             ARTIFACTORY_DISTRIBUTION: artifactory
             NEW_RT_PASSWORD: ${int_gkeEnvVars_new_rt_password}
+            CLEANUP_RESOURCES: true
         execution:
           onStart:
             - echo "Preparing for work..."
             - echo "Create GKE cluster and deploy Artifactory and Xray, latest versions form Helm repo"
           onExecute:
-            - GKE_CLUSTER=tf-provider-xray-$(date +%s)
+            - add_run_variables GKE_CLUSTER=tf-provider-xray-$(date +%s)
+            - add_run_variables CLEANUP_RESOURCES=${CLEANUP_RESOURCES}
             - fozzie checkout native-steps
             - echo "Whitelist Pipelines Node CIDR to be able to run Artifactory and Xray tests. Same variable is used in gke/create_cluster step to restrict access to the control plane."
             - export WHITELIST_CIDR=$(curl ifconfig.me)/32 && echo ${WHITELIST_CIDR}
@@ -148,6 +150,8 @@ pipelines:
           inputResources:
             - name: GitHubTFProviderXrayRepoJFrog
           environmentVariables:
+            GKE_ZONE: ${int_gkeEnvVars_gke_zone}
+            GKE_PROJECT: ${int_gkeEnvVars_gke_project}
             NEW_RT_PASSWORD: ${int_gkeEnvVars_new_rt_password}
         execution:
           onStart:
@@ -194,7 +198,14 @@ pipelines:
             - make acceptance
             - make install -e TARGET_ARCH=linux_amd64
           onSuccess:
-            - send_notification partnersSlack --text "Terraform Provider Xray run is completed. Version ${NEXT_PROVIDER_VERSION}."
+            - >- 
+              if [[ "${CLEANUP_RESOURCES}" == true ]]; then
+                echo "Delete GKE cluster."
+                gcloud container clusters delete ${GKE_CLUSTER} --zone ${GKE_ZONE} --project ${GKE_PROJECT} --quiet
+                send_notification partnersSlack --text "Terraform Provider Xray run is completed. Version ${NEXT_PROVIDER_VERSION}. GKE cluster was deleted."
+              else
+                send_notification partnersSlack --text "Terraform Provider Xray run is completed. Version ${NEXT_PROVIDER_VERSION}. GKE cluster wasn't deleted."
+              fi
           onFailure:
             - echo "Failure"
             - send_notification partnersSlack --text "<${res_GitHubTFProviderXrayRepoJFrog_gitRepoRepositoryHttpsUrl}|Terraform Provider Xray>. Pipeline failed on <${step_url}|${step_name}> step"
