Pipeline, uncomment slack notification

--- a/.jfrog-pipelines/TFproviderTest.yml
+++ b/.jfrog-pipelines/TFproviderTest.yml
@@ -123,7 +123,8 @@ pipelines:
             - export STATE="failure"
             - export DESCRIPTION="Pipeline has failed."
             - cd ${res_terraform_provider_shared_resourcePath}
-            - ./scripts/github-status.sh ${res_terraform_provider_xray_gitProvider_token} ${res_terraform_provider_xray_gitRepoFullName} ${res_terraform_provider_xray_commitSha} && cd ${PWD}            #- send_notification partnersSlack --text "<${res_terraform_provider_xray_gitRepoRepositoryHttpsUrl}|Terraform Provider Xray>. Pipeline failed on <${step_url}|${step_name}> step"
+            - ./scripts/github-status.sh ${res_terraform_provider_xray_gitProvider_token} ${res_terraform_provider_xray_gitRepoFullName} ${res_terraform_provider_xray_commitSha} && cd ${PWD}
+            - send_notification partnersSlack --text "<${res_terraform_provider_xray_gitRepoRepositoryHttpsUrl}|Terraform Provider Xray>. Pipeline failed on <${step_url}|${step_name}> step"
             - >-
               if [[ -n "${GKE_CLUSTER}" ]]; then
                 echo "Removing GKE cluster ${GKE_CLUSTER}"
