--- a/.jfrog-pipelines/TFproviderTest.yml
+++ b/.jfrog-pipelines/TFproviderTest.yml
@@ -104,7 +104,7 @@ pipelines:
             - kubectl rollout status deployment/artifactory-artifactory-nginx
             - kubectl rollout status statefulset/artifactory
             - echo "Installing JFrog Xray"
-            - helm upgrade --install xray jfrog/xray --set postgresql.persistence.size=200Gi --set xray.jfrogUrl=http://artifactory-artifactory-nginx --set xray.masterKey=$MASTER_KEY --set xray.joinKey=$JOIN_KEY
+            - helm upgrade --install xray jfrog/xray --set postgresql.persistence.size=200Gi --set xray.jfrogUrl=http://artifactory-artifactory-nginx --set xray.masterKey=$MASTER_KEY --set xray.joinKey=$JOIN_KEY --set xray.serviceAccount.create=true --set xray.rbac.create=true
             - kubectl rollout status statefulset/xray-postgresql
             - kubectl rollout status statefulset/xray-rabbitmq
             - kubectl rollout status statefulset/xray
