--- a/.jfrog-pipelines/TFproviderTest.yml
+++ b/.jfrog-pipelines/TFproviderTest.yml
@@ -8,7 +8,7 @@ resources:
         include: master
       buildOn:
         commit: false
-        pullRequestCreate: false
+        pullRequestCreate: true
       cancelPendingRunsOn:
         pullRequestUpdate: false
   - name: terraform_provider_shared
@@ -43,6 +43,13 @@ pipelines:
                 language: java
                 versions:
                   - "11"
+          requiresApproval:
+            approvers:
+              - alexh
+              - danielmi
+            notifications:
+              - integrationName: partnership_slack
+            timeoutSeconds: 172800 # 2 days
           integrations:
             - name: gkeEnvVars
             - name: zscalerIPs
