--- a/.jfrog-pipelines/TFproviderTest.yml
+++ b/.jfrog-pipelines/TFproviderTest.yml
@@ -195,7 +195,7 @@ pipelines:
                             --header "accept: application/json, text/plain, */*" \
                             --header "content-type: application/json;charset=UTF-8" \
                             --header "x-requested-with: XMLHttpRequest" \
-                            -d '{"user":"'"${ARTIFACTORY_USERNAME}"'","password":"'"${ARTIFACTORY_PASSWORD}"'","type":"login"}' | grep FALSE)
+                            -d '{"user":"admin","password":"'"${ARTIFACTORY_PASSWORD}"'","type":"login"}' | grep FALSE)
             - export REFRESHTOKEN=$(echo $COOKIES | grep REFRESHTOKEN | awk '{print $7 }')
             - export ACCESSTOKEN=$(echo $COOKIES | grep ACCESSTOKEN | awk '{print $14 }') # awk returns null on Mac, and the actual key on Ubuntu
             - >-
@@ -206,6 +206,7 @@ pipelines:
             - export XRAY_ACCESS_TOKEN=${ACCESS_KEY}
             - echo "Unset ARTIFACTORY_USERNAME and ARTIFACTORY_PASSWORD, acceptance test will use XRAY_ACCESS_TOKEN instead"
             - unset ARTIFACTORY_USERNAME && unset ARTIFACTORY_PASSWORD
+            - printenv
             - export TF_ACC=1
             - make acceptance
             - make install -e TARGET_ARCH=linux_amd64
