--- a/.jfrog-pipelines/TFproviderTest.yml
+++ b/.jfrog-pipelines/TFproviderTest.yml
@@ -77,10 +77,10 @@ pipelines:
             - helm version
             - kubectl version --client
             - echo "Install gcloud cli"
-            - sudo apt-get install apt-transport-https ca-certificates gnupg
+            - sudo apt-get update && sudo apt-get install apt-transport-https ca-certificates gnupg
             - curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo gpg --dearmor -o /usr/share/keyrings/cloud.google.gpg
             - echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
-            - sudo apt-get update && sudo apt-get install -y google-cloud-cli google-cloud-sdk-gke-gcloud-auth-plugin
+            - sudo apt-get update && sudo apt-get install -y google-cloud-cli google-cloud-cli-gke-gcloud-auth-plugin
             - gke-gcloud-auth-plugin --version
             - echo "Renaming GKE_CLUSTER variable, so k8s cluster name will be unique."
             - add_run_variables GKE_CLUSTER=tf-provider-xray-$(date +%s)
